# C_SLAM_ROS

./: README.md  Readme
distributed_mapper/: CMakeLists.txt  README
distributed_mapper/src/: DistributedMapperOptimization.cpp  DistributedOptimizationRos.cpp  g2o_optimization.cpp  make_graph.cpp  publish_map.cpp
g2o_example/: CMakeLists.txt  CMakeLists.txt~  package.xml
g2o_example/include/g2o_example/: edge_pose_landmark_reproject.h
g2o_example/src/: pose_adjust.cpp
gps_node/: CMakeLists.txt  package.xml
gps_node/src/: gps_node.cpp
simple_detection/: CMakeLists.txt  package.xml
simple_detection/config/: cmake_config.h
simple_detection/depth_clustering/: CMakeLists.txt
simple_detection/depth_clustering/clusterers/: image_based_clusterer.h
simple_detection/src/: simple_detection.cpp
simple_detection/tracking/: CMakeLists.txt  TrackManager.cpp  TrackManager.h  TrackTarget.cpp  TrackTarget.h  assignment.h  assignmentoptimal.cpp
